add central valley county cities

--- a/service-areas/central-valley/merced-county.html
+++ b/service-areas/central-valley/merced-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -75,22 +75,22 @@
         <h2>Cities We Serve in Merced County</h2>
         <ul class="city-grid">
           <li>
-            <a href="merced-pool-remodeling.html" class="city-btn">
+            <a href="merced-county/merced.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Merced
             </a>
           </li>
           <li>
-            <a href="losbanos-pool-remodeling.html" class="city-btn">
+            <a href="merced-county/los-banos.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Los Banos
             </a>
           </li>
           <li>
-            <a href="atwater-pool-remodeling.html" class="city-btn">
+            <a href="merced-county/atwater.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Atwater
             </a>
           </li>
           <li>
-            <a href="dospalos-pool-remodeling.html" class="city-btn">
+            <a href="merced-county/dos-palos.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Dos Palos
             </a>
           </li>
