--- a/service-areas/central-valley/san-joaquin-county.html
+++ b/service-areas/central-valley/san-joaquin-county.html
@@ -62,22 +62,22 @@
         <h2>Serving Cities Across San Joaquin County</h2>
         <ul class="city-grid">
           <li>
-            <a href="stockton-pool-remodeling.html" class="city-btn">
+            <a href="san-joaquin-county/stockton.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Stockton
             </a>
           </li>
           <li>
-            <a href="tracy-pool-remodeling.html" class="city-btn">
+            <a href="san-joaquin-county/tracy.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Tracy
             </a>
           </li>
           <li>
-            <a href="manteca-pool-remodeling.html" class="city-btn">
+            <a href="san-joaquin-county/manteca.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Manteca
             </a>
           </li>
           <li>
-            <a href="lodi-pool-remodeling.html" class="city-btn">
+            <a href="san-joaquin-county/lodi.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Lodi
             </a>
           </li>
