--- a/service-areas/central-valley/stanislaus-county.html
+++ b/service-areas/central-valley/stanislaus-county.html
@@ -70,10 +70,10 @@
         <h2>Cities We Serve in Stanislaus County</h2>
 
         <ul class="city-grid">
-          <li><a href="modesto-pool-remodeling.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Modesto</a></li>              
-          <li><a href="turlock-pool-remodeling.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Turlock</a></li>
-          <li><a href="patterson-pool-remodeling.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Patterson</a></li>
-          <li><a href="ceres-pool-remodeling.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Ceres</a></li>
+          <li><a href="stanislaus-county/modesto.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Modesto</a></li>              
+          <li><a href="stanislaus-county/turlock.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Turlock</a></li>
+          <li><a href="stanislaus-county/patterson.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Patterson</a></li>
+          <li><a href="stanislaus-county/ceres.html" class="city-btn"><i class="fas fa-map-marker-alt"></i> Ceres</a></li>
         </ul>
       </div>
     </section>
