--- a/service-areas/central-valley/fresno-county.html
+++ b/service-areas/central-valley/fresno-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -73,22 +73,22 @@
         <h2>Cities We Serve in Fresno County</h2>
         <ul class="city-grid">
           <li>
-            <a href="fresno-pool-remodeling.html" class="city-btn">
+            <a href="fresno-county/fresno.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Fresno
             </a>
           </li>
           <li>
-            <a href="clovis-pool-remodeling.html" class="city-btn">
+            <a href="fresno-county/clovis.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Clovis
             </a>
           </li>
           <li>
-            <a href="selma-pool-remodeling.html" class="city-btn">
+            <a href="fresno-county/selma.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Selma
             </a>
           </li>
           <li>
-            <a href="sanger-pool-remodeling.html" class="city-btn">
+            <a href="fresno-county/sanger.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Sanger
             </a>
           </li>
