--- a/service-areas/central-valley/kern-county.html
+++ b/service-areas/central-valley/kern-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -72,22 +72,22 @@
         <h2>Cities We Serve in Kern County</h2>
         <ul class="city-grid">
           <li>
-            <a href="bakersfield-pool-remodeling.html" class="city-btn">
+            <a href="kern-county/bakersfield.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Bakersfield
             </a>
           </li>
           <li>
-            <a href="delano-pool-remodeling.html" class="city-btn">
+            <a href="kern-county/delano.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Delano
             </a>
           </li>
           <li>
-            <a href="wasco-pool-remodeling.html" class="city-btn">
+            <a href="kern-county/wasco.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Wasco
             </a>
           </li>
           <li>
-            <a href="tehachapi-pool-remodeling.html" class="city-btn">
+            <a href="kern-county/tehachapi.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Tehachapi
             </a>
           </li>
