--- a/service-areas/central-valley/kings-county.html
+++ b/service-areas/central-valley/kings-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -73,22 +73,22 @@
         <h2>Cities We Serve in Kings County</h2>
         <ul class="city-grid">
           <li>
-            <a href="hanford-pool-remodeling.html" class="city-btn">
+            <a href="kings-county/hanford.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Hanford
             </a>
           </li>
           <li>
-            <a href="lemoore-pool-remodeling.html" class="city-btn">
+            <a href="kings-county/lemoore.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Lemoore
             </a>
           </li>
           <li>
-            <a href="armona-pool-remodeling.html" class="city-btn">
+            <a href="kings-county/armona.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Armona
             </a>
           </li>
           <li>
-            <a href="corcoran-pool-remodeling.html" class="city-btn">
+            <a href="kings-county/corcoran.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Corcoran
             </a>
           </li>
