add northern california city pages

--- a/service-areas/northern-california/el-dorado-county.html
+++ b/service-areas/northern-california/el-dorado-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -78,22 +78,22 @@
         <h2>Cities We Serve in El Dorado County</h2>
         <ul class="city-grid">
           <li>
-            <a href="placerville-pool-remodeling.html" class="city-btn">
+            <a href="el-dorado-county/placerville.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Placerville
             </a>
           </li>
           <li>
-            <a href="el-dorado-hills-pool-remodeling.html" class="city-btn">
+            <a href="el-dorado-county/el-dorado-hills.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> El Dorado Hills
             </a>
           </li>
           <li>
-            <a href="cameron-park-pool-remodeling.html" class="city-btn">
+            <a href="el-dorado-county/cameron-park.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Cameron Park
             </a>
           </li>
           <li>
-            <a href="south-lake-tahoe-pool-remodeling.html" class="city-btn">
+            <a href="el-dorado-county/south-lake-tahoe.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> South Lake Tahoe
             </a>
           </li>
