--- a/service-areas/northern-california/placer-county.html
+++ b/service-areas/northern-california/placer-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -77,22 +77,22 @@
         <h2>Cities We Serve in Placer County</h2>
         <ul class="city-grid">
           <li>
-            <a href="roseville-pool-remodeling.html" class="city-btn">
+            <a href="placer-county/roseville.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Roseville
             </a>
           </li>
           <li>
-            <a href="rocklin-pool-remodeling.html" class="city-btn">
+            <a href="placer-county/rocklin.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Rocklin
             </a>
           </li>
           <li>
-            <a href="lincoln-pool-remodeling.html" class="city-btn">
+            <a href="placer-county/lincoln.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Lincoln
             </a>
           </li>
           <li>
-            <a href="auburn-pool-remodeling.html" class="city-btn">
+            <a href="placer-county/auburn.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Auburn
             </a>
           </li>
