--- a/service-areas/northern-california/solano-county.html
+++ b/service-areas/northern-california/solano-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -76,22 +76,22 @@
         <h2>Cities We Serve in Solano County</h2>
         <ul class="city-grid">
           <li>
-            <a href="vacaville-pool-remodeling.html" class="city-btn">
+            <a href="solano-county/vacaville.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Vacaville
             </a>
           </li>
           <li>
-            <a href="fairfield-pool-remodeling.html" class="city-btn">
+            <a href="solano-county/fairfield.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Fairfield
             </a>
           </li>
           <li>
-            <a href="vallejo-pool-remodeling.html" class="city-btn">
+            <a href="solano-county/vallejo.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Vallejo
             </a>
           </li>
           <li>
-            <a href="benicia-pool-remodeling.html" class="city-btn">
+            <a href="solano-county/benicia.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Benicia
             </a>
           </li>
