--- a/service-areas/northern-california/sonoma-county.html
+++ b/service-areas/northern-california/sonoma-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -74,35 +74,26 @@
         <h2>Cities We Serve in Sonoma County</h2>
         <ul class="city-grid">
           <li>
-            <a href="santa-rosa-pool-remodeling.html" class="city-btn">
+            <a href="sonoma-county/santa-rosa.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Santa Rosa
             </a>
           </li>
           <li>
-            <a href="petaluma-pool-remodeling.html" class="city-btn">
+            <a href="sonoma-county/petaluma.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Petaluma
             </a>
           </li>
           <li>
-            <a href="rohnert-park-pool-remodeling.html" class="city-btn">
+            <a href="sonoma-county/rohnert-park.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Rohnert Park
             </a>
           </li>
           <li>
-            <a href="windsor-pool-remodeling.html" class="city-btn">
+            <a href="sonoma-county/windsor.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Windsor
             </a>
           </li>
-          <li>
-            <a href="healdsburg-pool-remodeling.html" class="city-btn">
-              <i class="fas fa-map-marker-alt"></i> Healdsburg
-            </a>
-          </li>
-          <li>
-            <a href="sebastopol-pool-remodeling.html" class="city-btn">
-              <i class="fas fa-map-marker-alt"></i> Sebastopol
-            </a>
-          </li>
+          
         </ul>
       </div>
     </section>
