--- a/service-areas/northern-california/yolo-county.html
+++ b/service-areas/northern-california/yolo-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -77,22 +77,17 @@
         <h2>Cities We Serve in Yolo County</h2>
         <ul class="city-grid">
           <li>
-            <a href="davis-pool-remodeling.html" class="city-btn">
+            <a href="yolo-county/davis.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Davis
             </a>
           </li>
           <li>
-            <a href="woodland-pool-remodeling.html" class="city-btn">
+            <a href="yolo-county/woodland.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Woodland
             </a>
           </li>
           <li>
-            <a href="west-sacramento-pool-remodeling.html" class="city-btn">
-              <i class="fas fa-map-marker-alt"></i> West Sacramento
-            </a>
-          </li>
-          <li>
-            <a href="winters-pool-remodeling.html" class="city-btn">
+            <a href="yolo-county/winters.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Winters
             </a>
           </li>
