--- a/service-areas/northern-california/contra-costa-county.html
+++ b/service-areas/northern-california/contra-costa-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -69,22 +69,22 @@
         <h2>Cities We Serve in Contra Costa County</h2>
         <ul class="city-grid">
           <li>
-            <a href="walnut-creek-pool-remodeling.html" class="city-btn">
+            <a href="contra-costa-county/walnut-creek.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Walnut Creek
             </a>
           </li>
           <li>
-            <a href="concord-pool-remodeling.html" class="city-btn">
+            <a href="contra-costa-county/concord.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Concord
             </a>
           </li>
           <li>
-            <a href="san-ramon-pool-remodeling.html" class="city-btn">
+            <a href="contra-costa-county/san-ramon.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> San Ramon
             </a>
           </li>
           <li>
-            <a href="danville-pool-remodeling.html" class="city-btn">
+            <a href="contra-costa-county/danville.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Danville
             </a>
           </li>
