--- a/service-areas/northern-california/sacramento-county.html
+++ b/service-areas/northern-california/sacramento-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,14 +26,14 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -67,22 +67,22 @@
         <h2>Cities We Serve in Sacramento County</h2>
         <ul class="city-grid">
           <li>
-            <a href="sacramento-pool-remodeling.html" class="city-btn">
+            <a href="sacramento-county/sacramento.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Sacramento
             </a>
           </li>
           <li>
-            <a href="elk-grove-pool-remodeling.html" class="city-btn">
+            <a href="sacramento-county/elk-grove.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Elk Grove
             </a>
           </li>
           <li>
-            <a href="rancho-cordova-pool-remodeling.html" class="city-btn">
+            <a href="sacramento-county/rancho-cordova.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Rancho Cordova
             </a>
           </li>
           <li>
-            <a href="citrus-heights-pool-remodeling.html" class="city-btn">
+            <a href="sacramento-county/citrus-heights.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Citrus Heights
             </a>
           </li>
