--- a/service-areas/northern-california/san-mateo-county.html
+++ b/service-areas/northern-california/san-mateo-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -78,22 +78,22 @@
         <h2>Cities We Serve in San Mateo County</h2>
         <ul class="city-grid">
           <li>
-            <a href="san-mateo-pool-remodeling.html" class="city-btn">
+            <a href="san-mateo-county/san-mateo.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> San Mateo
             </a>
           </li>
           <li>
-            <a href="redwood-city-pool-remodeling.html" class="city-btn">
+            <a href="san-mateo-county/redwood-city.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Redwood City
             </a>
           </li>
           <li>
-            <a href="san-carlos-pool-remodeling.html" class="city-btn">
+            <a href="san-mateo-county/san-carlos.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> San Carlos
             </a>
           </li>
           <li>
-            <a href="foster-city-pool-remodeling.html" class="city-btn">
+            <a href="san-mateo-county/foster-city.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Foster City
             </a>
           </li>
