--- a/service-areas/northern-california/santa-clara-county.html
+++ b/service-areas/northern-california/santa-clara-county.html
@@ -17,8 +17,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="../../styles/main.css" />
-    <link rel="stylesheet" href="../../styles/service-areas.css" />
+    <link rel="stylesheet" href="../../../styles/main.css" />
+    <link rel="stylesheet" href="../../../styles/service-areas.css" />
   </head>
 
   <body>
@@ -26,15 +26,15 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="../../images/logo.png" alt="Pacific Edge Pools logo" />
+          <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
 
         <ul class="nav-links">
-          <li><a href="../../index.html">Home</a></li>
-          <li><a href="../../services.html">Services</a></li>
-          <li><a href="../../about.html">About</a></li>
-          <li><a class="quote-btn" href="../../quote.html">Get a Quote</a></li>
+          <li><a href="../../../index.html">Home</a></li>
+          <li><a href="../../../services.html">Services</a></li>
+          <li><a href="../../../about.html">About</a></li>
+          <li><a class="quote-btn" href="../../../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -76,22 +76,22 @@
         <h2>Cities We Serve in Santa Clara County</h2>
         <ul class="city-grid">
           <li>
-            <a href="san-jose-pool-remodeling.html" class="city-btn">
+            <a href="santa-clara-county/san-jose.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> San Jose
             </a>
           </li>
           <li>
-            <a href="santa-clara-pool-remodeling.html" class="city-btn">
+            <a href="santa-clara-county/santa-clara.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Santa Clara
             </a>
           </li>
           <li>
-            <a href="cupertino-pool-remodeling.html" class="city-btn">
+            <a href="santa-clara-county/cupertino.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Cupertino
             </a>
           </li>
           <li>
-            <a href="sunnyvale-pool-remodeling.html" class="city-btn">
+            <a href="santa-clara-county/sunnyvale.html" class="city-btn">
               <i class="fas fa-map-marker-alt"></i> Sunnyvale
             </a>
           </li>
