--- a/about.html
+++ b/about.html
@@ -19,6 +19,13 @@
           <img src="images/logo.png" alt="pool remodeling project" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
+
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -164,5 +171,15 @@
     <footer class="footer">
       <p>&copy; 2026 Pacific Edge Pools. All rights reserved.</p>
     </footer>
+    
+    <script>
+      const hamburger = document.getElementById('hamburger');
+      const navLinks = document.querySelector('.nav-links');
+
+      hamburger.addEventListener('click', () => {
+        hamburger.classList.toggle('active');
+        navLinks.classList.toggle('active');
+      });
+    </script>
   </body>
 </html>
