--- a/services/resurfacing.html
+++ b/services/resurfacing.html
@@ -15,6 +15,13 @@
           <img src="/images/logo.png" alt="pool remodeling project in the bay area and Central Valley" />
           <div class="logo-text">Pacific Edge Pools</div>
         </div>
+
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -68,5 +75,15 @@
     <footer>
       <p>© 2026 Pacific Edge Pools. All rights reserved.</p>
     </footer>
+
+    <script>
+      const hamburger = document.getElementById('hamburger');
+      const navLinks = document.getElementById('nav-links');
+
+      hamburger.addEventListener('click', () => {
+        hamburger.classList.toggle('active');
+        navLinks.classList.toggle('active');
+      });
+    </script>
   </body>
 </html>
