--- a/services/resurfacing.html
+++ b/services/resurfacing.html
@@ -12,8 +12,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="/images/logo.png" alt="pool remodeling project in the bay area and Central Valley" />
-          <div class="logo-text">Pacific Edge Pools</div>
+          <a href="../index.html" class="logo-link">
+            <img src="/images/logo.png" alt="pool remodeling project in the bay area and Central Valley" />
+            <div class="logo-text">Pacific Edge Pools</div>
+          </a>
         </div>
 
         <div class="hamburger" id="hamburger">
@@ -22,11 +24,11 @@
           <span></span>
         </div>
 
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service-areas.html">Services</a></li>
-          <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
+        <ul class="nav-links" id="nav-links">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about.html">About Us</a></li>
+          <li><a href="../service-areas.html">Services</a></li>
+          <li><a class="quote-btn" href="../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -68,7 +70,7 @@
     <!-- CTA -->
     <section class="cta-banner">
       <h2>Bring Your Pool Back to Life</h2>
-      <a href="quote.html" class="cta-btn">Get a Free Quote</a>
+      <a href="../quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
 
     <!-- FOOTER -->
