--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="images/logo.png" alt="pool remodeling project" />
-          <div class="logo-text">Pacific Edge Pools</div>
+          <a href="index.html" class="logo-link">
+            <img src="images/logo.png" alt="pool remodeling project" />
+            <div class="logo-text">Pacific Edge Pools</div>
+          </a>
         </div>
 
         <div class="hamburger" id="hamburger">
