--- a/service-areas.html
+++ b/service-areas.html
@@ -22,8 +22,10 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="images/logo.png" alt="pool remodeling project" />
-          <div class="logo-text">Pacific Edge Pools</div>
+          <a href="index.html" class="logo-link">
+            <img src="images/logo.png" alt="pool remodeling project" />
+            <div class="logo-text">Pacific Edge Pools</div>
+          </a>
         </div>
 
         <div class="hamburger" id="hamburger">
@@ -32,7 +34,7 @@
           <span></span>
         </div>
 
-        <ul class="nav-links">
+        <ul class="nav-links" id="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="service-areas.html">Services</a></li>
@@ -181,7 +183,7 @@
 
     <script>
       const hamburger = document.getElementById('hamburger');
-      const navLinks = document.querySelector('.nav-links');
+      const navLinks = document.getElementById('nav-links');
 
       hamburger.addEventListener('click', () => {
         hamburger.classList.toggle('active');
