--- a/services/spa.html
+++ b/services/spa.html
@@ -12,11 +12,13 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img
-            src="/images/logo.png"
-            alt="pool remodeling project in the bay area and Central Valley"
-          />
-          <div class="logo-text">Pacific Edge Pools</div>
+          <a href="../index.html" class="logo-link">
+            <img
+              src="/images/logo.png"
+              alt="pool remodeling project in the bay area and Central Valley"
+            />
+            <div class="logo-text">Pacific Edge Pools</div>
+          </a>
         </div>
 
         <div class="hamburger" id="hamburger">
@@ -25,11 +27,11 @@
           <span></span>
         </div>  
 
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service-areas.html">Services</a></li>
-          <li><a class="quote-btn" href="quote.html">Get a Quote</a></li>
+        <ul class="nav-links" id="nav-links">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../about.html">About Us</a></li>
+          <li><a href="../service-areas.html">Services</a></li>
+          <li><a class="quote-btn" href="../quote.html">Get a Quote</a></li>
         </ul>
       </nav>
     </header>
@@ -72,7 +74,7 @@
     <!-- CTA -->
     <section class="cta-banner">
       <h2>Upgrade Your Spa Experience</h2>
-      <a href="quote.html" class="cta-btn">Get a Free Quote</a>
+      <a href="../quote.html" class="cta-btn">Get a Free Quote</a>
     </section>
 
     <!-- FOOTER -->
