--- a/service-areas/central-valley/fresno-county.html
+++ b/service-areas/central-valley/fresno-county.html
@@ -26,10 +26,17 @@
     <header>
       <nav class="navbar">
         <div class="logo">
+          <a href="../../../index.html" class="logo-link">
           <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
+          </a>  
+          <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links" id="nav-links">
           <li><a href="../../../index.html">Home</a></li>
           <li><a href="../../../about.html">About</a></li>
           <li><a href="../../../service-areas.html">Services</a></li>
@@ -118,5 +125,14 @@
     <footer class="footer">
       <p>&copy; 2026 Pacific Edge Pools. All rights reserved.</p>
     </footer>
+    <script>
+      const hamburger = document.getElementById("hamburger");
+      const navLinks = document.getElementById("nav-links");
+
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        hamburger.classList.toggle("active");
+      });
+    </script>
   </body>
 </html>
