--- a/service-areas/central-valley/kern-county.html
+++ b/service-areas/central-valley/kern-county.html
@@ -26,10 +26,17 @@
     <header>
       <nav class="navbar">
         <div class="logo">
+          <a href="../../../index.html" class="logo-link">
           <img src="../../../images/logo.png" alt="Pacific Edge Pools logo" />
           <div class="logo-text">Pacific Edge Pools</div>
+          </a>  
+          <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
-        <ul class="nav-links">
+        <ul class="nav-links" id="nav-links">
           <li><a href="../../../index.html">Home</a></li>
           <li><a href="../../../about.html">About</a></li>
           <li><a href="../../../service-areas.html">Services</a></li>
